# Syndro

./: .gitignore  .metadata  ADDITIONAL_BUGS_FOUND.md  ALL_BUGS_FIXED_SUMMARY.md  BUG_FIXES_COMPLETE.md  LICENSE  NEW_BUGS_FOUND.md  NOTICE.md  PERFORMANCE_OPTIMIZATION.md  PRIVACY_POLICY.md  PRODUCTION_REVIEW.md  README.md  SYNDRO.md  TRANSFER_REQUEST_FIX.md  analysis_options.yaml  build-windows.yml  pubspec.yaml  ui.md
.github/workflows/: android-debug.yml  android-release.yml  androidtv-debug.yml  build-all.yml  build-android.yml  build-linux.yml  build-macos.yml  build-windows.yml  generate-keystore.yml  linux.yml  macos.yml  windows.yml
android/: gradle.properties  gradlew
android/app/: build.gradle  proguard-rules.pro
assets/icons/: .placeholder
assets/images/: .placeholder
installer/linux/: install-context-menu.sh  syndro-dolphin.desktop  syndro-nautilus.py  syndro.desktop  uninstall-context-menu.sh
installer/windows/: add_context_menu.reg  install-context-menu.bat  remove_context_menu.reg  uninstall-context-menu.bat
lib/: main.dart
lib/core/config/: app_config.dart  (+1 more)
lib/l10n/: app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_ja.arb  app_zh.arb
lib/shells/: desktop_shell.dart  mobile_shell.dart  tv_shell.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: AppDelegate.swift  Info.plist  main.swift
macos/Runner.xcodeproj/: project.pbxproj
plans/: duplicate_detection_plan.md  feature-verification-report.md  implementation_plan.md  large_file_browser_share_fix.md  pause-resume-notification-stats.md  release_signing_setup.md  test-improvement-plan.md
test/: test_helpers.dart  widget_test.dart
test/integration/: parallel_transfer_integration_test.dart  transfer_integration_test.dart
windows/: CMakeLists.txt
windows/flutter/: CMakeLists.txt  generated_plugin_registrant.cc  generated_plugins.cmake
windows/flutter/ephemeral/.plugin_symlinks/: connectivity_plus  flutter_webrtc  livekit_client  media_kit_video  sqlite3_flutter_libs  wakelock_plus
windows/runner/: CMakeLists.txt  Runner.rc  flutter_window.h  main.cpp  utils.cpp  win32_window.cpp  win32_window.h
(+167 files in other folders)
